<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepartmentActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_department"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/fieldDep_AddDep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:layout_below="@id/heading"
        android:textColor="@color/white"
         />

    <TextView
        android:id="@+id/fieldInfo_AddDep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="40dp"
        android:layout_below="@id/fieldDep_AddDep"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/department_AddDep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/heading"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/fieldDep_AddDep"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/info_AddDep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:layout_toRightOf="@+id/fieldInfo_AddDep"
        android:layout_below="@id/department_AddDep"
        android:textColor="@color/white"
         />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_centerInParent="true"
        android:background="@color/red"
        android:textColor="@color/white" />

</RelativeLayout>